# Drawing-To-Fourier

./: CMakeLists.txt  README.md  build.sh
include/: .DrawnEq.hpp.swp  DrawnEq.hpp  Math.hpp
src/: .drawneq.cpp.swp  drawneq.cpp  main.cpp  math.cpp
